--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tradelog",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.5.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -33,5 +33,19 @@
     "vite-plugin-electron": "^0.28.6",
     "vite-plugin-electron-renderer": "^0.14.5"
   },
-  "main": "dist-electron/main.js"
+  "main": "dist-electron/main.js",
+  "build": {
+    "appId": "com.tuonome.nomeapp",
+    "productName": "NomeApp",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "dist/**/*",  
+      "dist-electron/main.js"     
+    ],
+    "win": {
+      "target": "nsis"
+    }
+  }
 }
