--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   },
   "main": "dist-electron/main.js",
   "build": {
-    "appId": "com.tuonome.nomeapp",
-    "productName": "NomeApp",
+    "appId": "com.",
+    "productName": "tradeLog",
     "directories": {
       "output": "dist"
     },
@@ -45,6 +45,7 @@
       "dist-electron/main.js"     
     ],
     "win": {
+      "icon": "build/icon.ico",
       "target": "nsis"
     }
   }
