--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "buffer": "^6.0.3",
+    "file-selector": "^2.1.2",
     "openai": "^5.5.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
@@ -41,8 +42,8 @@
       "output": "dist"
     },
     "files": [
-      "dist/**/*",  
-      "dist-electron/main.js"     
+      "dist/**/*",
+      "dist-electron/main.js"
     ],
     "win": {
       "icon": "build/icon.ico",
