--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "tradelog",
   "private": true,
   "version": "0.5.0",
-  "type": "module",
-  "scripts": {
+  "type": "module",  "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && electron-builder",
+    "build": "vite build && electron-builder",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -33,20 +32,19 @@
     "vite": "^6.3.5",
     "vite-plugin-electron": "^0.28.6",
     "vite-plugin-electron-renderer": "^0.14.5"
-  },
-  "main": "dist-electron/main.js",
+  },  "main": "dist-electron/main.js",
   "build": {
-    "appId": "com.",
-    "productName": "tradeLog",
+    "appId": "com.tradelog.app",
+    "productName": "TradeLog",
     "directories": {
       "output": "dist"
     },
     "files": [
       "dist/**/*",
-      "dist-electron/main.js"
+      "dist-electron/**/*"
     ],
     "win": {
-      "icon": "build/icon.ico",
+      "icon": "src/assets/TradeLog.ico",
       "target": "nsis"
     }
   }
