--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,15 +1,15 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "YourAppID",
+  "appId": "com.tradelog.app",
   "asar": true,
-  "productName": "YourAppName",
+  "productName": "TradeLog",
   "directories": {
     "output": "release/${version}"
   },
   "files": [
-    "dist",
-    "dist-electron"
+    "dist/**/*",
+    "dist-electron/**/*"
   ],
   "mac": {
     "target": [
